# yoklama

./: .gitignore  .pre-commit-config.yaml  ChangeLog  LICENSE  README.md  pyproject.toml  run.py  tox.ini
tests/: conftest.py  test_checkers.py
yoklama/: __init__.py  base.py  checkers.py  runner.py
yoklama/modules/: dergipark.py  donanimhaber.py  eksisozluk.py  evrimagaci.py  incisozluk.py  instela.py  kizlarsoruyor.py  memurlarsozluk.py  onedio.py  shiftdelete.py  technopat.py  teknoseyir.py  uludagsozluk.py
